# Rosser

./: .dockerignore  .env.example  .gitignore  LICENSE  README.md  README_CN.md  docker-compose.yml  forge.config.js  index.html  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  tsconfig.json  vite.config.ts
.github/workflows/: release.yml
scripts/: sync_version.py
src/: App.vue  main.ts  style.css
src/backend/: .env.example  Dockerfile  docker-compose.yml  openapi.json  pyproject.toml
src/backend/alembic/: env.py
src/backend/alembic/versions/: 0a6abfdf271e_drop_subscription_tag_table.py  113f7e9b92c9_add_content_and_author_to_article.py  4ef7cf61fa7e_add_proxy_settings.py  504d8f7ccf7b_drop_font_size_from_settings.py  64fa75566802_remove_ui_settings.py  73b15fbe4d3f_add_read_time_to_article_state.py  7c1e9b2a4f3d_remove_auto_refresh_interval_add_subscription_and_site_limits.py  c9b6c5eb5a58_merge_heads.py  d898329d87b7_settings_key_value_groups.py
src/backend/app/: main.py
src/backend/app/api/: __init__.py
src/backend/app/core/: config.py  database.py  http.py  process.py  security.py  updater.py  version.py
src/backend/app/models/: __init__.py
src/backend/app/schemas/: __init__.py
src/backend/app/services/: fetch.py  file.py  opml.py  site.py
src/backend/scripts/: build.py  docker-entrypoint.sh  export_openapi.py
src/backend/tests/: conftest.py  test_articles.py  test_auth.py  test_categories.py  test_cleanup.py  test_fetch.py  test_http.py  test_opml.py  test_settings.py  test_subscriptions.py  test_updater.py
src/components/: Article.vue  Content.vue  Header.vue  Index.vue  Menu.vue  Settings.vue  Sider.vue
src/components/common/: CheckMenu.vue
src/components/content/: Article.vue  (+4 more)
src/electron/: ipc.js  main.js
src/frontend/: .gitignore  Dockerfile  index.html  package.json  playwright.config.ts  tsconfig.json  vite.config.ts  vitest.config.ts
src/frontend/src-tauri/: Cargo.toml  tauri.conf.json
src/frontend/src-tauri/capabilities/: default.json
src/frontend/src-tauri/icons/: icon.icns
src/frontend/src-tauri/src/: i18n.rs  main.rs
src/locales/: en.ts  index.ts  zh.ts
src/mobile/: Dockerfile  components.d.ts  index.html  package.json  playwright.config.ts  vite.config.ts  vitest.config.ts
src/plugins/: axios.ts  store.ts
src/proxy/: Dockerfile  nginx.conf
src/shared/: package.json  tsconfig.json
src/utils/: api.ts  browser.ts  data.ts  drag.js  pywebview.js  tags.ts  time.ts  types.ts
src_backend/: main.py  requirements.txt  requirements_win.txt
src_backend/app/: __init__.py  application.py  cli.py  common.py  environ.py
(+169 files in other folders)
